Update Image Denoising with Gibbs Sampling Clearly Explained.ipynb

--- a/Image Denoising with Gibbs Sampling Clearly Explained.ipynb
+++ b/Image Denoising with Gibbs Sampling Clearly Explained.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "## Let's start!\n",
     "Let's start with some definition:\n",
-    "We have a binary image $x$ of size $(N, M)$ with some noise. That means that each pixel $x_i_j$ can be only white or black (1, -1) and could be flipped with a certain unknown probability. We'd like to have our actual denoised image that we'll denote as $y$. Notice that we will define in uppercase the random variables $X$ or $Y$ and the instances/sample of this random variables in lower case, $x$, $y$ respectively.\n",
+    "We have a binary image $x$ of size $(N, M)$ with some noise. That means that each pixel $x_{ij}$ can be only white or black (1, -1) and could be flipped with a certain unknown probability. We'd like to have our actual denoised image that we'll denote as $y$. Notice that we will define in uppercase the random variables $X$ or $Y$ and the instances/sample of this random variables in lower case, $x$, $y$ respectively.\n",
     "We'll define the random variable $Y$ of the wanted denoised images to be composed by $N*M$ pixels, so $N*M$ random variables indexed as $Y_{ij}$ with $i$ and $j$, row and column respectively.\n",
     "\n",
     "Now we want to create our probability distribution $P(Y| X = x)$ that means: \"What is the probability distribution that defines Y given that the random variable X is exactly our image x?\". **We're doing this because we assume (or better we'd like) that if we sample from this distribution that most probable resulting images would be a denoised version of $x$. But, is this the best way? In this case, it'll be better to define a deterministic link between the probability distribution and the wanted denoised image. For example, we can set that if $P(Y_{ij} = 1 | Y_{\\backslash ij}, X = x) > 0.5 $ we'll set $ y_{ij} = 1$**.\n",
@@ -51,7 +51,7 @@
     "\n",
     "It's reasonable to think that each pixel can depend only on its neighbours let's say, following the image below:\n",
     "\n",
-    "![alternatvie text](img.png)\n",
+    "![alternative text](img.png)\n",
     "\n",
     "So, we can impose that the random variable $Y_{ij}$ depends on $Y_{i-1,j}, Y_{i+1, j}, Y_{i, j-1}, Y_{i, j+1}$, that are the four neighbours, that we'll call $N(Y_{ij})$ and $X_{ij}$ that is the corresponding noisy pixel."
    ],
