Update Image Denoising with Gibbs Sampling Clearly Explained.ipynb

--- a/Image Denoising with Gibbs Sampling Clearly Explained.ipynb
+++ b/Image Denoising with Gibbs Sampling Clearly Explained.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "## Let's start!\n",
     "Let's start with some definition:\n",
-    "We have a binary image $x$ of size $(N, M)$ with some noise. That means that each pixel $x_i_j$ can be only white or black (1, -1) and could be flipped with a certain unknown probability. We'd like to have our actual denoised image that we'll denote as $y$. Notice that we will define in uppercase the random variables $X$ or $Y$ and the instances/sample of this random variables in lower case, $x$, $y$ respectively.\n",
+    "We have a binary image $x$ of size $(N, M)$ with some noise. That means that each pixel $x_{ij}$ can be only white or black (1, -1) and could be flipped with a certain unknown probability. We'd like to have our actual denoised image that we'll denote as $y$. Notice that we will define in uppercase the random variables $X$ or $Y$ and the instances/sample of this random variables in lower case, $x$, $y$ respectively.\n",
     "We'll define the random variable $Y$ of the wanted denoised images to be composed by $N*M$ pixels, so $N*M$ random variables indexed as $Y_{ij}$ with $i$ and $j$, row and column respectively.\n",
     "\n",
     "Now we want to create our probability distribution $P(Y| X = x)$ that means: \"What is the probability distribution that defines Y given that the random variable X is exactly our image x?\". **We're doing this because we assume (or better we'd like) that if we sample from this distribution that most probable resulting images would be a denoised version of $x$. But, is this the best way? In this case, it'll be better to define a deterministic link between the probability distribution and the wanted denoised image. For example, we can set that if $P(Y_{ij} = 1 | Y_{\\backslash ij}, X = x) > 0.5 $ we'll set $ y_{ij} = 1$**.\n",
@@ -99,7 +99,6 @@
     "\n",
     "$$\n",
     "Where $E(X)$ is called Energy and it's the function that we'd like to use to model our problem. In this case **The lower the energy the highest the probability, but we have defined our energy function in the opposite way!!! So we need to fix it! A minus sign is enough :)**\n",
-    "\n",
     "$$\n",
     "    E(Y_{ij} = y_{ij}, N(Y_{ij}) = N'(y_{ij}), X_{ij} = x_{ij}) = - (\\alpha*y_{ij}x_{ij} + \\beta*\\sum_{ij \\in N(y_{ij})} y_{ij}y_{i'j'})\n",
     "$$"
