Update Image Denoising with Gibbs Sampling Clearly Explained.ipynb

--- a/Image Denoising with Gibbs Sampling Clearly Explained.ipynb
+++ b/Image Denoising with Gibbs Sampling Clearly Explained.ipynb
@@ -36,8 +36,8 @@
    "source": [
     "## 1. Definition of a Probability Distribution that relates the pixels\n",
     "What do we have to do with $P(Y | X = x)$? As already mentioned, we can say that the best way to use it in a binary images problem, is to consider that if $P(Y_{ij} = 1 | Y_{\\backslash ij}, X = x) > 0.5 $ so $ y_{ij} = 1$. We can use this approach because considering a stable distribution we have in this way one and only one final denoised image. Because otherwise we can sample from the distribution undefinetely having multiple probably not good resulting image.\n",
-    "Perfect! But do we have analitically this distribution? Probably not, because, as we'll see later, we have $N*M$ unknown conditionally dependent variables. But are we able to sample from it? YES! And how to do it is the answer to the final problem to solve. \n",
-    "So a good way is to sample multiple times from $P(Y_{ij} = 1 |Y_{\\backslash ij}, X = x)$, estimate it's value and use it to define $y_{ij} = 1$"
+    "Perfect! But do we have analytically this distribution? Probably not, because, as we'll see later, we have $N*M$ unknown conditionally dependent variables. But are we able to sample from it? YES! And how to do it is the answer to the final problem to solve. \n",
+    "So a good way is to sample multiple times from $P(Y_{ij} = 1 |Y_{\\backslash ij}, X = x)$, estimate its value and use it to define $y_{ij} = 1$"
    ],
    "metadata": {
     "collapsed": false
@@ -51,7 +51,7 @@
     "\n",
     "It's reasonable to think that each pixel can depend only on its neighbours let's say, following the image below:\n",
     "\n",
-    "![alternative text](img.png)\n",
+    "![MRF](img.png)",
     "\n",
     "So, we can impose that the random variable $Y_{ij}$ depends on $Y_{i-1,j}, Y_{i+1, j}, Y_{i, j-1}, Y_{i, j+1}$, that are the four neighbours, that we'll call $N(Y_{ij})$ and $X_{ij}$ that is the corresponding noisy pixel."
    ],
@@ -64,9 +64,9 @@
    "cell_type": "markdown",
    "source": [
     "Ok, now we can say that it is of course easier using a \"deterministic function\" instead of a probabilistic ones.\n",
-    "In a binary image, where the pixels can be only black or white, we can set a some kind of voting system where pixel should have a high probability to be equal to the neighbours pixels. For example, we can define some rules:\n",
+    "In a binary image, where the pixels can be only black or white, we can set some kind of voting system where pixel should have a high probability to be equal to the neighbours pixels. For example, we can define some rules:\n",
     "1. The function should give a high value when all the surrounding pixels are the same;\n",
-    "2. The function should give a low value when all the surronding pixels are different, messy let's say.(high entropy?)"
+    "2. The function should give a low value when all the surrounding pixels are different, messy let's say. (high entropy?)"
    ],
    "metadata": {
     "collapsed": false
