Update Image Denoising with Gibbs Sampling Clearly Explained.ipynb

--- a/Image Denoising with Gibbs Sampling Clearly Explained.ipynb
+++ b/Image Denoising with Gibbs Sampling Clearly Explained.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "It's reasonable to think that each pixel can depend only on its neighbours let's say, following the image below:\n",
     "\n",
-    "![MRF](img.png)",
+    "![MRF](./img.png) \n",
     "\n",
     "So, we can impose that the random variable $Y_{ij}$ depends on $Y_{i-1,j}, Y_{i+1, j}, Y_{i, j-1}, Y_{i, j+1}$, that are the four neighbours, that we'll call $N(Y_{ij})$ and $X_{ij}$ that is the corresponding noisy pixel."
    ],
