Update Image Denoising with Gibbs Sampling Clearly Explained.ipynb

--- a/Image Denoising with Gibbs Sampling Clearly Explained.ipynb
+++ b/Image Denoising with Gibbs Sampling Clearly Explained.ipynb
@@ -131,7 +131,7 @@
    "source": [
     "So,\n",
     "$$\n",
-    "    -E(Y_{ij} = 1, N(Y_{ij}) | X_{ij} = x_{ij}) = \\alpha*x_{ij} + \\beta*\\sum_{ij \\in N(Y_{ij})} Y_{i'j'} \\\\\n",
+    "    -E(Y_{ij} = 1, N(Y_{ij}) | X_{ij} = x_{ij}) = \\alpha*x_{ij} + \\beta*\\sum_{ij \\in N(Y_{ij})} Y_{i'j'} \n",
     "    -E(Y_{ij} = -1, N(Y_{ij}) | X_{ij} = x_{ij}) =  - (\\alpha*x_{ij} + \\beta*\\sum_{ij \\in N(Y_{ij})} Y_{i'j'})\n",
     "$$\n",
     "And,\n",
